# Rag-Second-Brain

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
knowledge_base/: Algorithms.md  DiscreteMath.md  Master the Theory Behind Programming.md
scripts/: export_kb_preview.py  rag_ask.py  retrieve_augment_preview.py
src/: __init__.py
src/augment/: __init__.py  builder.py  formatter.py  templates.py  types.py
src/chunking/: MarkdownSplitter.py  __init__.py  chunk_build.py  export.py  load.py  pipeline.py  split.py  types.py
src/cli/: __init__.py  __main__.py  context.py  main.py  parser.py  pipeline.py
src/llm_client/: __init__.py  client.py  config.py  exceptions.py  llm.py
src/retrieve/: __init__.py  bm25_retriever.py  pipeline.py  tokenize.py  types.py
tests/augment/: test_builder.py  test_formatter.py
tests/chunking/: test_chunk_build.py  test_export.py  test_load.py  test_pipeline.py  test_split.py
tests/chunking/fixtures/: chunking_max_chars.md  chunking_no_heading.md  chunking_simple.md  chunking_two_h1.md
tests/cli/: test_cli_pipeline.py  test_context.py  test_main.py  test_parser.py
tests/llm_client/: test_client.py  test_config.py  test_exceptions.py  test_llm.py
tests/retrieve/: test_bm25_retriever.py  test_pipeline.py  test_tokenize.py
