[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-practice1"
version = "0.1.0"
description = "RAG practice M1: chunking, BM25 retrieve, augment, OpenAI-compatible generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.40.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[project.scripts]
rag-ask = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]